# lc

./: README.md  pyproject.toml
mongodb/: docker-compose.yml
src/: db.sqlite3
src/lc/: asgi.py  auth.py  db.py  dto.py  entity.py  presentation.py  response.py  settings.py  urls.py  usecase.py  wsgi.py
src/user/: dto.py  entity.py  presentation.py  service.py  urls.py  usecase.py
src/user/migrations/: 0001_initial.py
